Karuna added changes

--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -867,6 +867,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
      .mobile_width{
         
      }
+     .para-top{
+      font-size: 19px ! important;
+     }
      .Typecomponent1Img_vision{
       width: 350px ! important;
       height: 185px ! important;
