--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -191,3 +191,20 @@
 
    
   }
+  @media only screen and (device-width : 320px) and (device-height : 568px) { 
+    
+     .blogblock {
+        height: 661px ! important;
+    }
+    .blogdate{
+      margin-top: 40px;
+     
+  }
+  .blogtext h4{
+    padding: 0px 3px;
+  } 
+  .blogtext{
+    height: 726px;
+  }
+
+}
