--- a/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
+++ b/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
@@ -26,8 +26,12 @@
 	    padding: 0px ! important;
 	}
 	.img1 img{
-		height: 375px ! important;
-        object-fit: contain;
+		height: 300px ! important;
+        /*object-fit: contain;*/
+        width: 100%;
+	 }
+	 .padding_Mob{
+	 	padding-left: 0px;
 	 }
 
 }	 
