--- a/ui/website/src/blockTemplate/TemplateOverview/TemplateOverview.css
+++ b/ui/website/src/blockTemplate/TemplateOverview/TemplateOverview.css
@@ -132,3 +132,8 @@
     opacity: 0;
   }
 }
+  @media only screen and (device-width : 320px) and (device-height : 568px) { 
+    .B2T_overviewTxt{
+      height: auto;
+    }
+  }
