--- a/ui/website/src/allBlocks/Resourcevideo/Resourcevideo.css
+++ b/ui/website/src/allBlocks/Resourcevideo/Resourcevideo.css
@@ -196,3 +196,25 @@ height: 100px;
 
 
   } 
+  @media only screen and (device-width : 320px) and (device-height : 568px) { 
+  .videocard1 {
+    width: 260px ! important;
+  }
+ } 
+  @media only screen and (device-width : 411px) and (device-height : 731px) { 
+  .videocard1 {
+    width: 350px ! important;
+  }
+ } 
+  @media only screen and (device-width : 360px) and (device-height : 640px) { 
+  .videocard1 {
+    width: 295px ! important;
+  }
+ } 
+  @media only screen and (device-width : 600px) and (device-height : 960px) { 
+  .videocard1 {
+    width: 355px ! important;
+    margin-left: 95px;
+  }
+ } 
+
